[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
anyhow = "1.0.89"
tracing = "0.1.40"
futures = "0.3.31"
tokio-stream = "0.1.16"
chrono = "0.4.38"
serde = { version = "1.0.174", features = ["derive"] }
